tests/compile-fail/integration__integration__ecl_features__olde_unsupported_return_type.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: return types are not supported in old-style ECL subs like 'bouba'
  ┌─ <input>:7:1
  │
7 │ int bouba() {
  │ ^^^ unsupported return type

error: bad ABI for intrinsic: unexpected dword integer arg at index 1
    ┌─ /home/exp/asd/clone/truth/map/th08.eclm:194:3
    │
194 │ 4 So
    │   ^^ unexpected dword integer arg at index 1

error: bad ABI for intrinsic: unexpected dword integer arg at index 3
    ┌─ /home/exp/asd/clone/truth/map/th08.eclm:195:3
    │
195 │ 5 SoS
    │   ^^^ unexpected dword integer arg at index 3


